# obs-studio

./: CMakeLists.txt  build-win64.bat  buildspec.json
UI/obs-frontend-api/: CMakeLists.txt
build-aux/modules/: 30-ffmpeg.json
cmake/common/: helpers_common.cmake
cmake/windows/: helpers.cmake
libobs/: CMakeLists.txt  obs-internal.h  obs-module.c  obs-module.h  obs-video.c  obs.c  obs.h
libobs-d3d11/: CMakeLists.txt  d3d11-duplicator.cpp  d3d11-rebuild.cpp  d3d11-shader.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp
libobs-opengl/: CMakeLists.txt  gl-helpers.c  gl-helpers.h  gl-indexbuffer.c  gl-shader.c  gl-stagesurf.c  gl-subsystem.c  gl-subsystem.h  gl-texture2d.c  gl-texture3d.c  gl-texturecube.c  gl-vertexbuffer.c  gl-windows.c
libobs-winrt/: CMakeLists.txt  winrt-capture.cpp  winrt-capture.h  winrt-dispatch.cpp
libobs/graphics/: device-exports.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
plugins/: CMakeLists.txt
plugins/image-source/: CMakeLists.txt
plugins/nv-filters/: CMakeLists.txt
plugins/obs-ffmpeg/: CMakeLists.txt
plugins/obs-filters/: CMakeLists.txt
plugins/obs-libfdk/: CMakeLists.txt
plugins/obs-outputs/: CMakeLists.txt  flv-output.c  mp4-mux.c  mp4-output.c  obs-outputs.c  rtmp-stream.c
plugins/obs-qsv11/: CMakeLists.txt
plugins/obs-text/: CMakeLists.txt
plugins/obs-vst/: CMakeLists.txt
plugins/win-capture/: CMakeLists.txt  audio-helpers.c  audio-helpers.h  compat-helpers.c  duplicator-monitor-capture.c  game-capture-file-init.c  game-capture.c  monitor-capture.c  (+3 more)
test/win/: CMakeLists.txt  test.cpp
(+8 files in other folders)
